View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031213 | Open CASCADE | OCCT:Coding | public | 2019-12-03 12:19 | 2020-12-02 17:12 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.5.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031213: Coding Rules, RWStl_Reader - THE_BUFFER should NOT be a global object | ||||
Description | Variable THE_BUFFER introduced by 0030964 has wrong name as it is not constant / global:--- a/src/RWStl/RWStl_Reader.cxx +++ b/src/RWStl/RWStl_Reader.cxx + // Buffer to read + Standard_ReadLineBuffer THE_BUFFER (THE_BUFFER_SIZE); | ||||
Steps To Reproduce | Not required | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR31213 has been created by mzernova. SHA-1: 90c466dd242a4117240ed35ee00a6de3cbc89343 Detailed log of new commits: Author: mzernova Date: Tue Dec 3 13:51:02 2019 +0300 0031213: Coding Rules, RWStl_Reader - misnamed variable THE_BUFFER Renamed THE_BUFFER variable. |
|
The patch CR31213 is ready to review |
|
36 namespace 37 { 46 // Buffer to read 47 Standard_ReadLineBuffer RWStl_myBuffer (THE_BUFFER_SIZE); This buffer should not be put into a global variable! |
|
Branch CR31213 has been updated by mzernova. SHA-1: b58002c6ddb1d256924c698870a629dedf08b866 Detailed log of new commits: Author: mzernova Date: Wed Dec 4 15:48:19 2019 +0300 remarks from kgv |
|
Branch CR31213_1 has been created by mzernova. SHA-1: 10e12d458a1b441e77cea3e4836201ed19a055a1 Detailed log of new commits: Author: mzernova Date: Tue Dec 3 13:51:02 2019 +0300 0031213: Coding Rules, RWStl_Reader - THE_BUFFER should NOT be a global object Variable THE_BUFFER has been renamed and moved. |
|
The patch CR31213 is ready to review |
|
Combination - OCCT branch : IR-2019-12-06 master SHA - 5a8d30b87b5ab8f44e9011dc432d0dc8eb67a77b 5f5b1aed1c6e139bbd34314eca77ae7abcd8895c Products branch : IR-2019-12-06 SHA - 959ae07414622f22b3cf77b1922c1519d7e532d6 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16960.660000000054 / 16953.66000000014 [+0.04%] Products Total CPU difference: 10744.040000000065 / 10823.520000000082 [-0.73%] Windows-64-VC14: OCCT Total CPU difference: 18400.203125 / 18461.625 [-0.33%] Products Total CPU difference: 12762.109375 / 12785.21875 [-0.18%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31213_1 has been deleted by inv. SHA-1: 10e12d458a1b441e77cea3e4836201ed19a055a1 |
|
Branch CR31213 has been deleted by inv. SHA-1: b58002c6ddb1d256924c698870a629dedf08b866 |
occt: master c37bd936 2019-12-03 10:51:02 Committer: bugmaster Details Diff |
0031213: Coding Rules, RWStl_Reader - misnamed variable THE_BUFFER Renamed THE_BUFFER variable. |
Affected Issues 0031213 |
|
mod - src/RWStl/RWStl.cxx | Diff File | ||
mod - src/RWStl/RWStl_Reader.cxx | Diff File | ||
mod - src/RWStl/RWStl_Reader.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-12-03 12:19 | kgv | New Issue | |
2019-12-03 12:19 | kgv | Assigned To | => mzernova |
2019-12-03 12:19 | kgv | Relationship added | child of 0030964 |
2019-12-03 12:19 | kgv | Status | new => assigned |
2019-12-03 13:56 | git | Note Added: 0089358 | |
2019-12-03 13:57 | mzernova | Note Added: 0089359 | |
2019-12-03 13:57 | mzernova | Assigned To | mzernova => kgv |
2019-12-03 13:57 | mzernova | Status | assigned => resolved |
2019-12-03 13:57 | mzernova | Steps to Reproduce Updated | |
2019-12-03 14:46 | kgv | Note Added: 0089360 | |
2019-12-03 14:46 | kgv | Assigned To | kgv => mzernova |
2019-12-03 14:46 | kgv | Status | resolved => assigned |
2019-12-03 15:19 | kgv | Summary | Coding Rules, RWStl_Reader - misnamed variable THE_BUFFER => Coding Rules, RWStl_Reader - THE_BUFFER should NOT be a global variable |
2019-12-03 15:19 | kgv | Summary | Coding Rules, RWStl_Reader - THE_BUFFER should NOT be a global variable => Coding Rules, RWStl_Reader - THE_BUFFER should NOT be a global object |
2019-12-04 15:55 | git | Note Added: 0089378 | |
2019-12-04 15:56 | git | Note Added: 0089379 | |
2019-12-04 15:57 | mzernova | Note Added: 0089380 | |
2019-12-04 15:57 | mzernova | Assigned To | mzernova => kgv |
2019-12-04 15:57 | mzernova | Status | assigned => resolved |
2019-12-04 16:55 | kgv | Assigned To | kgv => bugmaster |
2019-12-04 16:55 | kgv | Status | resolved => reviewed |
2019-12-06 19:15 | bugmaster | Test case number | => Not required |
2019-12-08 11:51 | bugmaster | Note Added: 0089430 | |
2019-12-08 11:51 | bugmaster | Status | reviewed => tested |
2019-12-08 11:52 | bugmaster | Changeset attached | => occt master c37bd936 |
2019-12-08 11:52 | bugmaster | Status | tested => verified |
2019-12-08 11:52 | bugmaster | Resolution | open => fixed |
2019-12-08 12:14 | git | Note Added: 0089439 | |
2019-12-08 12:14 | git | Note Added: 0089440 | |
2020-12-02 16:41 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |