0031213: Coding Rules, RWStl_Reader - misnamed variable THE_BUFFER

Renamed THE_BUFFER variable.